fixtures/vyper/simple/overflow/negative/i8.vy
#! {
#!   "modes": [
#!     "V >=0.4.0"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "-128"
#!           ],
#!           "caller": "0xb01c13878f1438236617Cc0431479923d668DEE5"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: int8) -> int8:
    return witness - 1
